# chatbot

./: Cargo.toml
src/: chat.rs  chat_context.rs  completion.rs  main.rs
src/feishu/: auth.rs  chat.rs  message.rs  mod.rs
src/feishu/events/: common.rs  im_message.rs  mod.rs
